# ai-assisted-trading-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
ai_live_trading_bot/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: AI_ASSISTANT.md  API.md  ARCHITECTURE.md  BROKER_ADAPTERS.md  DEPLOYMENT.md  LEGAL_AND_RISK_WARNING.md  LIVE_TRADING_SAFETY.md  MT5_LIVE_TRADING.md  OPERATIONS.md  RISK_MANAGEMENT.md  SECURITY.md  SETUP.md  STRATEGY_GUIDE.md  TROUBLESHOOTING.md
fastapi_app/: main.py
tests/: test_ai.py  test_fastapi.py  test_management_commands.py  test_models_serializers.py  test_mt5_broker.py  test_position_sizing.py  test_risk_manager.py  test_strategies.py
trading_engine/: admin.py  apps.py  backtesting.py  configuration.py  execution.py  market_data.py  models.py  serializers.py  tasks.py  urls.py  views.py
trading_engine/ai/: __init__.py  providers.py
trading_engine/brokers/: __init__.py  base.py  exceptions.py  fake_mt5.py  mock_broker.py  mt5_live_broker.py  paper_broker.py
trading_engine/management/commands/: activate_kill_switch.py  mt5_check_connection.py  mt5_sync_account.py  mt5_sync_positions.py  mt5_sync_symbols.py  mt5_test_order.py  reset_kill_switch.py  run_demo_backtest.py  run_live_once.py  seed_demo.py  start_live_bot.py  stop_live_bot.py
trading_engine/migrations/: 0001_initial.py
trading_engine/risk/: __init__.py  manager.py  position_sizing.py
trading_engine/strategies/: __init__.py  base.py  breakout.py  moving_average.py  rsi.py
(+7 files in other folders)
