[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-live-trading-bot"
version = "0.1.0"
description = "Local-first Django/FastAPI AI-assisted live trading bot platform with MT5 safety gates."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5,<6",
    "djangorestframework>=3.15",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "celery>=5.3",
    "redis>=5",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "httpx2>=0.28",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-django>=4.8",
    "ruff>=0.5",
]
mt5 = [
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
]
openai = [
    "openai>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_live_trading_bot*", "fastapi_app*", "trading_engine*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ai_live_trading_bot.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"ai_live_trading_bot/settings.py" = ["S105"]
"fastapi_app/main.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
